// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debe de hacer un snapshot de <GifGrid/> debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h3
    className="card-grid animate__animated animate__fadeIn"
  >
    One Punch
     
    <span
      aria-label="stars"
      role="img"
    >
      🌟
    </span>
  </h3>
  <div
    className="spinner"
  />
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`debe de hacer un snapshot de <GifGrid/> debe de mostrar items cuando se cargan imágenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="card-grid animate__animated animate__fadeIn"
  >
    One Punch
     
    <span
      aria-label="stars"
      role="img"
    >
      🌟
    </span>
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Title pass test"
      url="https://localhost/random/object.jpg"
    />
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Title pass test"
      url="https://localhost/random/object.jpg"
    />
  </div>
</Fragment>
`;
